--- a/package.json
+++ b/package.json
@@ -14,25 +14,27 @@
     "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.14",
+    "clsx": "^2.0.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
     "next": "14.2.3",
+    "next-theme": "^0.1.5",
     "node-fetch": "^2.7.0",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "^18.3.0",
-    "tailwindcss": "^3.4.3",
-    "lucide-react": "^0.263.1",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.62",
     "@types/stripe": "^8.0.416",
-    "@types/jest": "^29.5.12",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/jest-dom": "^6.4.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.4.5"
