--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "setup": "node setup.js"
   },
   "dependencies": {
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.14",
     "clsx": "^2.0.0",
     "framer-motion": "^12.23.12",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
     "next": "14.2.3",
@@ -26,15 +30,18 @@
     "react-dom": "^18.2.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.62",
     "@types/stripe": "^8.0.416",
+    "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.4.5"
