--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.14",
     "clsx": "^2.0.0",
     "framer-motion": "^12.23.12",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
     "next": "14.2.3",
@@ -32,6 +33,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.62",
     "@types/stripe": "^8.0.416",
